<?xml version="1.0"?>
<package format="3">
  <name>project</name>
  <version>0.0.1</version>
  <description>Project package split from bishe</description>

  <maintainer email="mao@example.com">mao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>yesense_std_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
